Change survey filter report and change question partial

--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -1,24 +1,50 @@
-.question-report
+= content_tag :div, id: "question_#{question.id}", class: "question-item" do
+  %hr
+  .dropdown.pull-right
+    .dropdown-toggle{"aria-expanded": "false", "aria-haspopup": "true",
+    "data-toggle": "dropdown", href: "#", role: "button"}
+      = fa_icon "chevron-down"
+    %ul.dropdown-menu
+      %li
+        = link_to fa_icon("edit", text: t("app.edit")),
+          [:edit, @survey, question], remote: true
+      %li
+        = link_to fa_icon("remove", text: t("app.delete")), [@survey,question],
+          remote: true, method: :delete
+  %small.handle.pull-right.m-r-1= t "app.question.links.question_drag"
+
   %h3
     = question.title
+    %small
+      *
+      = t "app.question.question_types.#{question.question_type}"
+  - if question.choices.any?
+    %h4
+      = t("app.survey.choices.title")
+      %small
+        = fa_icon "list"
+    = render question.choices
 
-  - if ["single", "list"].include? question.question_type
-    = render "questions/tables/table_choice",
-      answers: question.answers.choice_counter(params), question: question
-  - if question.question_type == "image"
-    = render "questions/tables/table_image",
-      answers: question.answers.image_counter(params), question: question
-  - if question.question_type == "multiple"
-    = render "questions/tables/table_multiple",
-      answers: question.answers.multiple_choice_counter(params), question: question
-  - if question.question_type == "rating"
-    = render "questions/tables/table_rating",
-      answers: question.answers.rating_average(params), question: question
-  - if ["open", "description", "phone", "email"].include? question.question_type
-    = content_tag :div, id: "open_question_#{question.id}" do
-      = render "questions/tables/table_open", question: question
-  - if question.question_type == "date"
-    = content_tag :div, id: "date_question_#{question.id}" do
-      = render "questions/tables/table_date", question: question
+  - if question.images.any?
+    %h4
+      = t("app.survey.images.title")
+      %small
+        = fa_icon "image"
+    .row
+      - question.images.each do |image|
+        .col-xs-4.col-sm-4.col-md-2
+          - if image.reference_path.present?
+            = image_tag(image.reference_path, class: "img-responsive img-thumbnail")
+          - else
+            = image_tag(image.file.url(:thumb), class: "img-responsive img-thumbnail")
 
-  %hr
+  - if question.raitings.any?
+    %h4
+      = t("app.survey.ratings.title")
+      %small
+        = fa_icon "star"
+        = fa_icon "star"
+        = fa_icon "star"
+        = fa_icon "star"
+        = fa_icon "star"
+    = render question.raitings
