--- a/app/views/surveys/show.js.haml
+++ b/app/views/surveys/show.js.haml
@@ -1,9 +1,9 @@
 - if params[:page].present?
   - if ["open", "description", "phone", "email"].include? params[:type]
-    $("#open_question_#{params[:q]}").html('#{ j render "questions/tables/table_open", question: Question.find(params[:q]) }');
+    $("#open_question_#{params[:q]}").html('#{ j render "questions/tables/table_open", answers: @answers.open_responses(params[:q], params[:page]), question: Question.find(params[:q]) }');
   - elsif params[:type] == "date"
-    $("#date_question_#{params[:q]}").html('#{ j render "questions/tables/table_date", question: Question.find(params[:q]) }');
+    $("#date_question_#{params[:q]}").html('#{ j render "questions/tables/table_date", answers: @answers.date_responses(params[:q], params[:page]), question: Question.find(params[:q]) }');
 - else
   $(".data-stats").html("#{ j render "stats" }");
-  $("#survey-question-list").html("#{ j render @survey.questions }");
+  $("#survey-question-list").html("#{ j render partial: "answers/answer", locals: { questions: @questions, answers: @answers } }");
   $("#export-link").attr("href", "#{ survey_submissions_path(@survey, created_before: params[:created_before], created_after: params[:created_after], question_id: params[:question_id], choice_id: params[:choice_id], image_id: params[:image_id], choice_multiple_ids: params[:choice_multiple_ids], rating_id: params[:rating_id], rate: params[:rate], format: "csv")}");
