--- a/app/views/alerts/index.html.haml
+++ b/app/views/alerts/index.html.haml
@@ -1,6 +1,8 @@
 - content_for :sub_nav do
   .col-md-5
-    %h1= t "app.survey.notifications.subnav"
+    %h1
+      = t "app.survey.notifications.subnav"
+      %small (#{@survey.name})
   .col-md-3
     %ul.list-inline
       %li
@@ -14,7 +16,11 @@
     .col-md-8.col-md-offset-2
       .panel-piled
         .notification-list
-          = render @alerts
+          - if @alerts.present?
+            = render @alerts
+          - else
+            %h3.text-center= t("app.survey.notifications.text_nodata")
+            %p= fa_icon "exclamation", text: t("app.survey.notifications.text_info")
 
         .text-center
           = will_paginate @alerts
