--- a/app/views/submission_notifier_mailer/notifier.html.haml
+++ b/app/views/submission_notifier_mailer/notifier.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{content: "text/html; charset=UTF-8", "http-equiv": "Content-Type"}
-    %title #{@alert.keys[0].subject}
+    %title #{@alert.subject}
     %link{href: "https://fonts.googleapis.com/css?family=Roboto+Condensed", rel: "stylesheet"}
     :css
       body  {
@@ -41,12 +41,12 @@
       = image_tag "logo.png", width: 200
 
       %h3
-        = @alert.keys[0].survey.name
+        = @alert.survey.name
 
       %p
-        = @alert.keys[0].body
+        = @alert.body
 
-      - @alert.values[0].each do |answer|
+      - @notifications.each do |answer|
         %h4
           = answer.question.title
 
@@ -56,7 +56,7 @@
           .wrapper
             - answer.answer_raitings.each do |rate|
               - unless rate.response.nil?
-                - @alert.keys[0].alert_filters.each do |f|
+                - @alert.alert_filters.each do |f|
                   - if rate.raiting == f.raiting && f.answer.split(",").map(&:to_i).include?(rate.response)
                     %p
                       #{rate.raiting.name}:
