--- a/app/views/submissions/index.csv.haml
+++ b/app/views/submissions/index.csv.haml
@@ -1,6 +1,10 @@
-- headers = [t("app.survey.export.id"), t("app.survey.export.answered_on"), t("app.survey.export.survey"), t("app.survey.export.submitted_by")] + @survey.questions.map { |s| s.title }
+- headers = [t("app.survey.export.id"), t("app.survey.export.answered_on")] + @survey.questions.map { |s| s.title }
+
+= raw CSV.generate_line ["#{t("app.survey.export.date")} #{Time.now.strftime("%m/%d/%Y %I:%M%p")}"], :row_sep => ?\t
+= raw CSV.generate_line ["#{t("app.survey.export.survey")} #{@survey.id}"], :row_sep => ?\t
+
 = raw CSV.generate_line headers, :row_sep => ?\t
 
 - @submissions.each do |submission|
 
-  = raw CSV.generate_line [submission.id, submission.created_at.strftime("%m/%d/%Y at %I:%M%p"), submission.survey.name, submission.sender] + display_answers(submission.answers, @survey.questions), :row_sep => ?\t
+  = raw CSV.generate_line [submission.id, submission.created_at.strftime("%m/%d/%Y %I:%M%p")] + display_answers(submission.answers, @survey.questions), :row_sep => ?\t
