--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -23,13 +23,14 @@
           %ul.dropdown-menu
             %li
               = link_to t("app.survey.show.links.survey_preview"),
-                [:preview, @customer, @survey], target: "_blank"
+                [:preview, @customer, @survey], target: "_blank", id: "preview-link"
             %li
               = link_to t("app.survey.show.survey_export"),
                 survey_submissions_path(@survey, format: "csv"), id: "export-link"
             %li
               = link_to t("app.survey.show.links.survey_pdf"),
-                customer_survey_path(@customer, @survey, format: :pdf)
+                customer_survey_path(@customer, @survey, format: :pdf), target: "_blank",
+                id: "pdf-link"
             %li
               = link_to t("app.survey.show.links.survey_submit"), [:new, @survey, :submission]
             %li
@@ -82,5 +83,6 @@
 
         #survey-question-list
           /= render @survey.questions
-          = render partial: "answers/answer", locals: { questions: @questions, answers: @answers }
+          = render partial: "answers/answer",
+            locals: { questions: @questions, answers: @answers }
 
